styles/style.css
:root {
  --branding-color: black;
  --secondary-color: white;
  --heading-font-family: "DM Serif Display", serif;
  --default-font-family: "DM Sans", sans-serif;
}

body {
  font-family: var(--default-font-family);
}

h1 {
  font-family: var(--heading-font-family);
}

h2 {
  font-size: 58px;
}

h3 {
  font-size: 48px;
  font-family: var(--heading-font-family);
}

p {
  font-weight: 600;
  font-size: 16px;
  line-height: 30px;
}

img {
  border-radius: 4px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

nav {
  padding: 0;
}

nav ul {
  padding: 0;
  margin: 0;
}

nav li {
  display: inline;
  list-style: none;
  line-height: 42px;
  margin-left: 15px;
}

nav a {
  text-decoration: none;
  color: var(--branding-color);
}

nav a:hover,
nav li.active a {
  color: var(--secondary-color);
  background-color: var(--branding-color);
  transition: all 70ms ease-in-out;
  border-radius: 4px;
}

footer {
  margin: 60px 0;
}

footer .contact-box {
  background-color: var(--branding-color);
  color: var(--secondary-color);
  padding: 30px 120px;
  border-radius: 4px;
}

footer .email-link {
  text-decoration: none;
  color: var(--branding-color);
  font-size: 20px;
  font-weight: 600;
}

footer .email-link:hover,
footer .contact-button:hover {
  color: var(--secondary-color);
  background-color: var(--branding-color);
  border-radius: 4px;
}

footer .social-links a {
  margin: 8px;
  color: var(--branding-color);
  padding: 6px;
  font-size: 24px;
}

footer .social-links a:hover {
  color: var(--secondary-color);
  background-color: var(--branding-color);
  border-radius: 4px;
  transition: all 70ms ease-in-out;
}

.hero {
  background-color: var(--branding-color);
  color: var(--secondary-color);
  text-align: center;
  padding: 80px 20px;
}

.hero h1 {
  font-weight: bold;
  font-size: 96px;
}

.hero h2 {
  font-size: 32px;
  font-weight: 200;
  line-height: 2;
}

.hero p {
  font-size: 32px;
  font-weight: 200;
  margin: 0;
}

.content-container {
  padding: 30px 20px;
}

.content {
  margin: 30px;
}

.content h1 {
  font-size: 68px;
  line-height: 80px;
}

.content h2 {
  font-size: 20px;
}

.content h3 {
  font-size: 24px;
  line-height: 1.5;
}

.content p {
  font-size: 14px;
}

.btn-branding {
  background-color: var(--secondary-color);
  border-radius: 4px;
  font-weight: bold;
  font-size: 18px;
  line-height: 27px;
  padding: 12px 20px;
}

.btn-branding-outline {
  background-color: var(--branding-color);
  color: var(--secondary-color);
  border-radius: 4px;
  font-size: 18px;
  line-height: 27px;
  padding: 12px 20px;
}

.project-overview {
  text-align: center;
  padding: 30px 60px 0px;
}

.project-name {
  font-family: var(--heading-font-family);
}

.project-description {
  font-size: 18px;
  font-style: italic;
}

@media (max-width: 960px) {
  h1 {
    font-size: 60px;
    line-height: 1.2;
    margin: 18px;
  }

  h2 {
    font-size: 36px;
    line-height: 1.3;
  }

  .project-overview {
    padding: 0;
    text-align: center;
    line-height: 1;
  }

  .content-container {
    text-align: center;
  }

  footer .contact-box {
    padding: 30px;
  }

  .about-photo {
    width: 75%;
  }
}

